k8s/ingress-nginx/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    clientConfig:
      service:
        name: ingress-nginx-controller-admission
        namespace: ingress-nginx
        path: /networking/v1/ingresses
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTVENDQWpHZ0F3SUJBZ0lVWkdOS2JOdTdoQ2NWWHE0MFBlMjdlQjlsL3Jzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3BhVzVuY21WemN5MXVaMmx1ZUMxaFpHMXBjM05wYjI0dWFXNW5jbVZ6Y3kxdQpaMmx1ZUM1emRtTXdIaGNOTWpReE1ERTVNVFl3TVRFMVdoY05NalV4TURFNU1UWXdNVEUxV2pBME1USXdNQVlEClZRUUREQ2xwYm1keVpYTnpMVzVuYVc1NExXRmtiV2x6YzJsdmJpNXBibWR5WlhOekxXNW5hVzU0TG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKYlhOUVlDTEtyUDNZeGNXbnZsdWJXcAplcU1peDFvY3dr [...]
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    timeoutSeconds: 10
    sideEffects: None
